# goit-ds-hw-03

tsk1_mongo/: cnnct_mongo.py  main.py
tsk2_beautysoup/: authrs.json  parsing.py  pyproject.toml
