[tool.poetry]
name = "taks 1"
version = "0.1.0"
description = "hw"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
blacked = "^0.1.0a4"
pymongo = "^4.7.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"